Programming languages and paradigms/Interpreter/examples/bad/return_too_many.ho
func main() {
    f();
}

func f() {
    return 1; // error:6:5: too many arguments to return
}